# app/Models/Parking.php
@@ -6,5 +6,12 @@ use Illuminate\Database\Eloquent\Model;
 
 class Parking extends Model
 {
-    //
+    protected $fillable = [
+        'start_at',
+        'end_at',
+        'is_auto_renewal',
+        'cost',
+        'vehicle_id',
+        'zone_id',
+    ];
 }
